deploy.yml
### Deployment ###
# It manages a set of identical pods, ensuring that the specified number of replicas are running at all times
kind: Deployment
apiVersion: apps/v1
metadata:
  name: housley-counter-deployment                # The name of the Deployment
spec:
  replicas: 1                                     # The number of replicas to run
  selector:                                       # The selector for the pods that this Deployment manages
    matchLabels:
      app: housley-counter
  template:                                       # The template for the pods that this Deployment manages
    metadata:
      labels:                                     # The labels for the pods
        app: housley-counter
    spec:
      containers:
        - name: python-counter-container          # The name of the container
          image: housley-counter-image:latest     # The image to run in the container
          ports:
            - name: http                          # The port that the container is listening on
              containerPort: 8080
              protocol: TCP

          livenessProbe:                           # Check if the container is alive
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30               # Wait 30 seconds before first check
            periodSeconds: 10                     # Check every 10 seconds
            timeoutSeconds: 5                     # Timeout after 5 seconds
            failureThreshold: 3                   # Restart after 3 consecutive failures

          readinessProbe:                         # Check if the container is ready to receive traffic
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5                # Wait 5 seconds before first check
            periodSeconds: 5                      # Check every 5 seconds
            timeoutSeconds: 3                     # Timeout after 3 seconds
            failureThreshold: 3                   # Mark as not ready after 3 consecutive failures

### Service ###
# It exposes an application running on a set of Pods as a network service
---
kind: Service
apiVersion: v1
metadata:
  name: housley-counter-service                   # The name of the Service
spec:
  ports:
    - name: http-8080                             # The port that the Service is listening on
      port: 8080
      protocol: TCP
      targetPort: 8080                            # The port that the Service is forwarding to
  selector:                                       # The selector for the pods that this Service is forwarding to
    app: housley-counter


### Route ###
# It exposes a service at a host name, so that external clients can reach it by name
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: housley-counter-route                     # The name of the Route
spec:
  to:                                             # The service that the Route is forwarding to
    kind: Service
    name: housley-counter-service
    weight: 100
  port:                                           # The port that the Route is forwarding to
    targetPort: http-8080
  wildcardPolicy: None                            # The wildcard policy for the Route
